[gd_scene format=3 uid="uid://cbib7o5ppjx1j"]

[ext_resource type="Script" uid="uid://cymbp0o41rpax" path="res://scripts/in_game_ui.gd" id="1_5lkar"]
[ext_resource type="Texture2D" uid="uid://d2hxdk5mofh7u" path="res://assets/img/icons/winter.png" id="2_5lkar"]
[ext_resource type="Texture2D" uid="uid://du744q0d4i53y" path="res://assets/img/icons/spring.png" id="3_udpln"]
[ext_resource type="Texture2D" uid="uid://duh34ir2aaq63" path="res://assets/img/icons/summer.png" id="4_cxevs"]

[sub_resource type="LabelSettings" id="LabelSettings_db7xr"]
resource_local_to_scene = true
resource_name = "SeasonLabelSettings"
font_size = 33

[node name="Control" type="Control" unique_id=530651095]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_5lkar")

[node name="MarginContainer" type="MarginContainer" parent="." unique_id=670240865]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 78.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer" unique_id=730557826]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="PrevSeason" type="Panel" parent="MarginContainer/HBoxContainer" unique_id=2040123135]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/PrevSeason" unique_id=2058564961]
visible = false
layout_mode = 0
offset_left = 28.0
offset_top = 111.0
offset_right = 68.0
offset_bottom = 151.0
color = Color(0, 0, 0, 0.2784314)

[node name="Panel2" type="Panel" parent="MarginContainer/HBoxContainer/PrevSeason" unique_id=2054794993]
layout_mode = 0
offset_left = 28.0
offset_top = 111.0
offset_right = 68.0
offset_bottom = 151.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/PrevSeason" unique_id=1269248177]
layout_mode = 0
offset_left = 34.0
offset_top = 104.0
offset_right = 60.0
offset_bottom = 159.0
theme_override_font_sizes/font_size = 100
text = "Q"
label_settings = SubResource("LabelSettings_db7xr")

[node name="PrevSeasonIcon" type="Sprite2D" parent="MarginContainer/HBoxContainer/PrevSeason" unique_id=1195228759]
unique_name_in_owner = true
position = Vector2(50, 49)
scale = Vector2(0.154, 0.154)
texture = ExtResource("2_5lkar")

[node name="CurrentSeason" type="Panel" parent="MarginContainer/HBoxContainer" unique_id=2015544953]
custom_minimum_size = Vector2(140, 140)
layout_mode = 2
size_flags_vertical = 4

[node name="CurrentSeasonIcon" type="Sprite2D" parent="MarginContainer/HBoxContainer/CurrentSeason" unique_id=1973175154]
unique_name_in_owner = true
position = Vector2(70, 70)
scale = Vector2(0.22146471, 0.21511854)
texture = ExtResource("3_udpln")

[node name="Spring" type="Sprite2D" parent="MarginContainer/HBoxContainer/CurrentSeason" unique_id=208902372]
visible = false
position = Vector2(75, 97)
scale = Vector2(0.22639866, 0.23344949)
texture = ExtResource("3_udpln")

[node name="NextSeason" type="Panel" parent="MarginContainer/HBoxContainer" unique_id=909701189]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_vertical = 4

[node name="ColorRect2" type="ColorRect" parent="MarginContainer/HBoxContainer/NextSeason" unique_id=1467823743]
visible = false
layout_mode = 0
offset_left = 30.0
offset_top = 114.0
offset_right = 70.0
offset_bottom = 154.0
color = Color(0, 0, 0, 0.2784314)

[node name="Panel" type="Panel" parent="MarginContainer/HBoxContainer/NextSeason" unique_id=550858039]
layout_mode = 0
offset_left = 30.0
offset_top = 112.0
offset_right = 70.0
offset_bottom = 152.0

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/NextSeason" unique_id=1167773127]
layout_mode = 0
offset_left = 39.0
offset_top = 107.0
offset_right = 79.0
offset_bottom = 162.0
scale = Vector2(1.0016812, 1)
text = "E"
label_settings = SubResource("LabelSettings_db7xr")

[node name="NextSeasonIcon" type="Sprite2D" parent="MarginContainer/HBoxContainer/NextSeason" unique_id=198008275]
unique_name_in_owner = true
position = Vector2(50, 50)
scale = Vector2(0.154, 0.154)
texture = ExtResource("4_cxevs")

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=1835661482]
